--- a/web.html
+++ b/web.html
@@ -1,4 +1,5 @@
-Ravindra Goli
+Hello Everyone 
+my Name is Ravindra Goli
 from NBNSCOE, Solapur
 i am a final year mechanical engineering Student
 i love to play cricket
